@@ -13,11 +13,18 @@ else
   CONFFLAGS += --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
 endif
 
+CFLAGS=
+# Fix FTBFS on ARM
+ifeq ($(DEB_BUILD_GNU_TYPE),arm-linux)
+	CFLAGS += -O0
+endif
+
+
 build: build-stamp
 build-stamp: patch
 	dh_testdir
 
-	./configure $(CONFFLAGS) --with-world \
+	CFLAGS="$(CFLAGS)" ./configure $(CONFFLAGS) --with-world \
 		--prefix=/usr '--mandir=$${prefix}/share/man'
 
 	$(MAKE) ARCH=$(PLARCH) PLARCH=$(PLARCH)
