@@ -13,8 +13,9 @@ swi-prolog (5.6.48-1) unstable; urgency=low
   * Add ${misc:Depends} for all binaries.
   * Include dpatch.make instead of re-implementing patch/unpatch targets.
   * Remove RPATH from pl2xpce.so in install target (spotted by lintian)
+  * Fix FTBFS on ARM.
 
- -- Chris Lamb <chris@chris-lamb.co.uk>  Mon, 24 Dec 2007 17:10:22 +0000
+ -- Chris Lamb <chris@chris-lamb.co.uk>  Fri, 28 Dec 2007 18:55:24 +0000
 
 swi-prolog (5.6.47-1) unstable; urgency=low
 
